--- a/src/app/core/globals.css
+++ b/src/app/core/globals.css
@@ -11,6 +11,9 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+}
+
+input, button, a {
     transition: all 0.3s;
 }
 
